[package]
name = "many_time_pad"
version = "0.1.0"
authors = ["Bartosz Wawrzyniak <bartosz.wawrzyniak.2000@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23"
eframe = { version = "0.23", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
log = "0.4"
encoding = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
clap = { version = "4.4.7", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
